QR component finishing touches and some fiddling with the @media

--- a/projects/qrComponentProject/index.html
+++ b/projects/qrComponentProject/index.html
@@ -12,10 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      href="/main/qrComponentProject/qrCodeComponents/images/favicon-32x32.png"
-    />
+    <link rel="icon" href="qrCodeComponents/images/favicon-32x32.png" />
   </head>
   <body>
     <main>
