adding css comments and improving styles readability

--- a/projects/nftPreviewCard/index.html
+++ b/projects/nftPreviewCard/index.html
@@ -39,7 +39,7 @@
 
       <!-- card text -->
 
-      <div>
+      <div class="paragraphsBox">
         <p class="title">Equilibrium #3429</p>
         <p class="description">
           Our Equilibrium collection promotes balance and calm.
